# multi-agent-index

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test_llm.py  test_structured.py
agents/: audience_agent.py  hook_agent.py  topic_agent.py  trend_agent.py
llm/: client.py
models/: audience.py  content_idea.py  hook.py  topic.py  trend.py
pages/: content.py  dashboard.py
