[project]
name = "multi-agent-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.104.1",
    "langgraph>=1.2.1",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "pydantic>=2.11.0",
    "nicegui>=3.13.0",
]
